test/mlir/reduce_sum_bad_case_4.mlir.stderr
test/mlir/reduce_sum_bad_case_4.mlir:3:10: error: 'colgm.reduce_sum' op axes[1] = 1 : i64 is duplicated
    %0 = colgm.reduce_sum %arg {axes = [1, 1]} : tensor<2x3x4xf32> -> tensor<2x4xf32>
         ^
test/mlir/reduce_sum_bad_case_4.mlir:3:10: note: see current operation: %0 = "colgm.reduce_sum"(%arg0) {axes = [1, 1]} : (tensor<2x3x4xf32>) -> tensor<2x4xf32>
